# EffectiveCookbook

./: CMakeLists.txt  README.md
code/Item1/src/: array_params.cpp  condition1.cpp  condition2.cpp  func_params.cpp
code/Item10/: CMakeLists.txt  enum.cpp
code/Item11/: CMakeLists.txt  use_delete_functions.cpp
code/Item12/: CMakeLists.txt  use_override.cpp
code/Item13/: CMakeLists.txt  use_const_iterator.cpp
code/Item14/: CMakeLists.txt  use_noexcept.cpp
code/Item15/: CMakeLists.txt  use_constexpr.cpp
code/Item16/: CMakeLists.txt  const_member.cpp
code/Item17/: CMakeLists.txt  special_member_functions.cpp
code/Item18/: CMakeLists.txt  use_unique_ptr.cpp
code/Item19/: CMakeLists.txt  use_shared_ptr.cpp
code/Item2/: CMakeLists.txt  auto.cpp  condition1.cpp  condition2.cpp  condition3.cpp  initializer_list.cpp
code/Item20/: CMakeLists.txt  use_weak_ptr.cpp
code/Item21/: CMakeLists.txt  use_make_shared.cpp
code/Item22/: CMakeLists.txt  gadget.h  main.cpp  widget.cpp  widget.h
code/Item23/: CMakeLists.txt  move_and_forward.cpp
code/Item24/: CMakeLists.txt  rref_and_universal_ref.cpp
code/Item25/: CMakeLists.txt  use_move_and_forward.cpp
code/Item26/: CMakeLists.txt  avoid_overload_universal_ref.cpp
code/Item27/: CMakeLists.txt  tag_dispatch.cpp
code/Item28/: CMakeLists.txt  reference_collapsing.cpp
code/Item3/: CMakeLists.txt  decltype.cpp
code/Item4/: CMakeLists.txt  type_deduction.cpp
code/Item5/: CMakeLists.txt  use_auto_if_you_can.cpp
code/Item6/: CMakeLists.txt  auto_undesired_type_deduction.cpp  use_explicit_type_instead.cpp
code/Item7/: CMakeLists.txt  create_object.cpp
code/Item8/: CMakeLists.txt  nullptr.cpp
code/Item9/: CMakeLists.txt  use_alias.cpp
code/code1/: CMakeLists.txt
code/code1/src/: condition3.cpp
