cmake_minimum_required(VERSION 3.15)
project(effective_cpp)

set (CMAKE_CXX_STANDARD 17)

add_subdirectory(code/Item1)
add_subdirectory(code/Item2)
add_subdirectory(code/Item3)
add_subdirectory(code/Item4)
add_subdirectory(code/Item5)
add_subdirectory(code/Item6)
add_subdirectory(code/Item7)
add_subdirectory(code/Item8)